Add vmu rt1170 board
Adds the initial vmu rt1170 board and needed FCB configuration for
booting.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -93,6 +93,9 @@ jobs:
           --example=hal_pwm --example=rtic_pwm
           --example=hal_i2c_mpu9250 --example=hal_i2c_lcd1602
           --example=rtic_usb_serial --example=rtic_usb_test_class --example=rtic_usb_keypress --example=rtic_usb_mouse
+        # Some basic vmu rt1170 samples
+        - --features=board/vmu-rt1170-cm7 --example=hal_led
+          --example=rtic_defmt_rtt        
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
