--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ imxrt1020 = ["imxrt-iomuxc/imxrt1020"]
 imxrt1060 = ["imxrt-iomuxc/imxrt1060"]
 imxrt1064 = ["imxrt-iomuxc/imxrt1060"]
 imxrt1170 = ["imxrt-iomuxc/imxrt1170"]
+imxrt1180 = ["imxrt-iomuxc/imxrt1180"]
 
 ################
 # Extra features
