Hack together a 1180EVK board to turn on a LED
The hal_led example can turn on the LED. We can't even blink that LED
yet! At least our runtime, build system, and supporting libraries are
working.

Here's how to build and program the example. You'll need a probe-rs
build that supports the 1180.

    cargo build --features=board/imxrt1180evk-cm33 --target=thumbv8m.main-none-eabihf --example=hal_led --release
    probe-rs run --chip=mimxrt1189 target/thumbv8m.main-none-eabihf/release/examples/hal_led

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -101,6 +101,19 @@ jobs:
     - name: Build examples
       run: cargo build ${{ matrix.config }} --target=thumbv7em-none-eabihf --release
 
+  # For now, we let the 1180EVK examples build with warnings. It's very WIP.
+  examples-1180-evk:
+    needs: lint-hal
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install a stable toolchain for the MCU target
+      run: rustup toolchain install stable --no-self-update --profile minimal --target thumbv8m.main-none-eabihf
+    - name: Build examples
+      run: >
+        cargo build --features=board/imxrt1180evk-cm33 --target=thumbv8m.main-none-eabihf --release
+        --example=hal_led
+
   # Run unit, integration tests.
   #
   # Select just one compatible RAL feature to pair with the HAL. The goal is to
