--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,4 @@
-[target.thumbv7em-none-eabihf]
+[target.'cfg(all(target_arch = "arm", target_os = "none"))']
 rustflags = [
     "-C", "link-arg=-Timxrt-link.x",
     "-C", "link-arg=-Tdefmt.x",
