--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ license = { workspace = true }
 edition = { workspace = true }
 version = "0.6.0"
 
+[dependencies.cortex-m]
+version = "0.7"
+
 [dependencies.cfg-if]
 version = "1.0"
 
@@ -154,7 +157,6 @@ codegen-units = 256
 ######################################
 
 [dev-dependencies]
-cortex-m = "0.7"
 imxrt-rt = { workspace = true }
 menu = "0.3.2"
 rtic = { version = "2.0", features = ["thumbv7-backend"] }
