Add WM8960, PCM5012, examples for SAI testing
Provides a sample application for playing back audio without DMA
directly writing to the FIFO of the SAI peripheral, which should result
in an I2S signaling to the WM8960 codec on the EVK boards. The codec
should then output a nice square wave on one channel and a sine wave on
the other.

The example in this case uses a PIT timer to print the status and a SAI1
interrupt noting a FIFO request to synthesize samples when needed.

Original author is @SpinFast in #143.
@libesz contributed the PCM5102 demo.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,8 +65,8 @@ jobs:
       matrix:
         config:
         # Boards that support all examples, and should build with additional drivers.
-        - --examples --features=board/teensy4,board/lcd1602
-        - --examples --features=board/imxrt1010evk,board/lcd1602
+        - --examples --features=board/teensy4,board/lcd1602,board/sai
+        - --examples --features=board/imxrt1010evk,board/lcd1602,board/sai
         - --examples --features=board/imxrt1060evk,board/lcd1602
         # SPI examples (might break other examples)
         - --example=rtic_spi_blocking --example=rtic_spi_controller --example=rtic_spi_peripheral --example=rtic_spi --example=async_dma_spi --features=board/teensy4,board/spi
