--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ pin-utils = "0.1"
 usb-device = { version = "0.2", features = ["test-class-high-speed"] }
 usbd-serial = "0.1"
 usbd-hid = "0.6"
+wm8960 = "0.1.2"
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
 board = { path = "board" }
@@ -204,6 +205,14 @@ name = "rtic_defmt_rtt"
 [[example]]
 name = "hal_i2c_lcd1602"
 required-features = ["board/lcd1602"]
+
+[[example]]
+name = "rtic_sai_wm8960"
+required-features = ["board/imxrt-log","board/sai"]
+
+[[example]]
+name = "rtic_sai_pcm5102"
+required-features = ["board/imxrt-log","board/sai"]
 
 [patch.crates-io.usbd-hid-macros]
 git = "https://github.com/imxrt-rs/usbd-hid.git"
