added SGTL5000 audio example
In case of Teensy, this example drives the SGTL5000 based audio board with the default pinout correctly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -219,7 +219,11 @@ required-features = ["board/imxrt-log","board/sai"]
 
 [[example]]
 name = "rtic_sai_pcm5102"
-required-features = ["board/imxrt-log","board/sai"]
+required-features = ["board/imxrt-log","board/sai","board/teensy4"]
+
+[[example]]
+name = "rtic_sai_sgtl5000"
+required-features = ["board/imxrt-log","board/sai","board/teensy4"]
 
 [patch.crates-io.imxrt-ral]
 git = "https://github.com/imxrt-rs/imxrt-ral"
